--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,5 @@ path = "src/lib.rs"
 [dependencies]
 clap = { version = "4.1.13", features = ["derive"] }
 clap_complete = "4.2.0"
-thiserror = "1.0.39"
+derive_more = { version = "2.0.1", features = ["display", "error"] }
 pipe-trait = "0.4.0"
